# hydralisk

./: .gitignore  AGENTS.md  README.md  pyproject.toml
deploy/caddy/: hydralisk.Caddyfile.example
deploy/gce/: deepseek-v4-g4-runner-role.yaml  install-hydralisk-l4.sh
deploy/systemd/: hydralisk-proxy.service  hydralisk.env.example  vllm-gpt-oss-20b.service
docs/: avatar-render-service-runbook.md  deepseek-v4-fable-admission.md  deepseek-v4-flash-gce-preflight.md  gce-l4-vllm-runbook.md  glm-5.2-reap-504b-fleet-operations-runbook.md  glm-5.2-reap-504b-g4-runbook.md  glm-5.2-sglang-preflight-runbook.md  gpt-oss-20b-khala-live-roadmap.md  oav3-tts.md
docs/evidence/: 2026-06-24-deepseek-b12x-clamp-overlay.md  2026-06-24-deepseek-b12x-clamp-patch-points.md  2026-06-24-deepseek-b12x-dynamic-clamp-g4.md  2026-06-24-deepseek-b12x-eager-mla-g4.md  2026-06-24-deepseek-b12x-full-model-g4.md  2026-06-24-deepseek-b12x-local-dispatcher-shim.md  2026-06-24-deepseek-b12x-local-shard-reference-fixture.md  2026-06-24-deepseek-b12x-static-clamp-g4.md  2026-06-24-deepseek-flashinfer-dsv4-g4-live-smoke.md  2026-06-24-deepseek-flashinfer-dsv4-g4-wrapper.md  2026-06-24-deepseek-flashmla-sparse-audit.md  2026-06-24-deepseek-g4-gcloud-auth-preflight.md  2026-06-24-deepseek-g4-grant-authority-preflight.md  2026-06-24-deepseek-g4-iam-grant-helper.md  2026-06-24-deepseek-g4-iam-preflight.md  2026-06-24-deepseek-gcloud-account-override.md  2026-06-24-deepseek-gcloud-credential-authority-probe.md  2026-06-24-deepseek-google-alt-credential-probe.md  2026-06-24-deepseek-service-account-key-probe.md  2026-06-24-deepseek-tailnet-executor-check.md  2026-06-24-deepseek-v4-concurrency-g4-gate.md  2026-06-24-deepseek-v4-fable-adapter-compatibility.md  2026-06-24-deepseek-v4-fable-authorized-security-policy.md  2026-06-24-deepseek-v4-fable-context-map.md  2026-06-24-deepseek-v4-fable-google-g4-final.md  2026-06-24-deepseek-v4-fable-indexer-loader-proof.md  2026-06-24-deepseek-v4-fable-lab-eval-decision.md  2026-06-24-deepseek-v4-fable-load-canary.md  2026-06-24-deepseek-v4-fable-merged-canary.md  2026-06-24-deepseek-v4-fable-merged-g4-preflight.md  2026-06-24-deepseek-v4-fable-merged-staging-manifest.tsv  2026-06-24-deepseek-v4-fable-merged-staging.md  2026-06-24-deepseek-v4-fable-o-proj-ownership.md  2026-06-24-deepseek-v4-fable-packed-delta.md  2026-06-24-deepseek-v4-fable-retarget-plan.md  2026-06-24-deepseek-v4-fable-transform-smoke.md  2026-06-24-deepseek-v4-fable-upstream-payload.md  2026-06-24-deepseek-v4-flash-b12x-wide-g4.md  2026-06-24-deepseek-v4-flash-clamp-backends-wide-g4.md  2026-06-24-deepseek-v4-flash-e8m0-upcast-g4.md  (+70 more)
hydralisk/: __init__.py
hydralisk/admission/: __init__.py  deepseek_v4_b12x_clamp_audit.py  deepseek_v4_b12x_clamp_patch.py  deepseek_v4_fable.py  deepseek_v4_flash.py  deepseek_v4_flashmla_sparse_audit.py  deepseek_v4_moe.py  deepseek_v4_sparse_mla.py  deepseek_v4_sparse_mla_smoke.py  deepseek_v4_sparse_mla_vllm_patch.py
hydralisk/avatar/: __init__.py  audio.py  clips.py  config.py  egress.py  musetalk_backend.py  protocol.py  receipts.py  renderer.py  scheduler.py  service.py  session.py  simulator.py  state.py
hydralisk/evals/: __init__.py  terminal_bench.py
hydralisk/serve/: __init__.py  config.py  proxy.py  receipts.py  smoke.py
hydralisk/tts/: __init__.py  chirp.py  cosyvoice.py  normalize.py  receipts.py  seam.py  service.py
profiles/: deepseek-v4-fable-adapter-g4.json  deepseek-v4-flash-gce-preflight.json  glm-5.2-fp8-sglang.json  glm-5.2-reap-504b-b12x-g4.json
scripts/: admit-glm-52-reap-504b-fleet-gce.sh  arm-glm-52-reap-504b-fleet-driver.sh  arm-glm-52-reap-504b-replica-gce.sh  audit-flashinfer-dsv4-fmha-sm120-gce.sh  collect-glm-52-reap-504b-roster.sh  expose-glm-52-reap-504b-private-proxy-gce.sh  expose-glm-52-reap-504b-public-https-gce.sh  extract-sarah-voice-ref.sh  install-glm-52-reap-504b-durable-canary-gce.sh  launch-glm-52-reap-504b-b12x-gce.sh  patch-vllm-deepseek-o-proj-gce.sh  patch-vllm-deepseek-o-proj-rhs-gce.sh  patch-vllm-deepseek-o-proj-rhs-scale-gce.sh  patch-vllm-deepseek-sparse-mla-fallback.sh  patch-vllm-e8m0-triton-upcast-gce.sh  plan-deepseek-v4-g4-iam-grant.sh  plan-glm-52-reap-504b-capacity.py  probe-deepseek-v4-b12x-g4-gce.sh  probe-deepseek-v4-clamp-backends-g4-gce.sh  probe-deepseek-v4-flashinfer-dsv4-g4-gce.sh  probe-deepseek-v4-gcloud-credentials.sh  probe-deepseek-v4-google-alt-credentials.sh  probe-deepseek-v4-khala-readiness-gce.sh  probe-deepseek-v4-nvfp4-g4-gce.sh  probe-deepseek-v4-oproj-fallback-g4-gce.sh  probe-deepseek-v4-provider-stack-gce.sh  probe-deepseek-v4-published-recipe-gce.sh  probe-deepseek-v4-scaled-mm-gce.sh  probe-deepseek-v4-service-account-keys.sh  probe-flashinfer-b12x-moe-gce.sh  probe-flashinfer-dsv4-fmha-gce.sh  probe-flashinfer-trtllm-nvfp4-moe-gce.sh  probe-glm-52-gce-admission.sh  probe-glm-52-reap-504b-g4-gce.sh  provision-glm-52-reap-504b-replica-gce.sh  run-glm-52-reap-terminal-bench-preflight.sh  smoke-deepseek-v4-gce.sh  smoke-deepseek-v4-sparse-mla-fallback-gce.sh  smoke-deepseek-v4-sparse-mla-vllm-fallback-gce.sh  smoke-gpt-oss-20b.sh  (+1 more)
tests/: test_avatar_audio.py  test_avatar_compat.py  test_avatar_musetalk_bbox.py  test_avatar_protocol.py  test_avatar_receipts.py  test_avatar_renderer.py  test_avatar_scheduler.py  test_avatar_service.py  test_avatar_simulator.py  test_avatar_state.py  test_deepseek_v4_b12x_clamp_audit.py  test_deepseek_v4_b12x_clamp_patch.py  test_deepseek_v4_fable.py  test_deepseek_v4_flashmla_sparse_audit.py  test_deepseek_v4_moe.py  test_deepseek_v4_preflight.py  test_deepseek_v4_sparse_mla.py  test_deepseek_v4_sparse_mla_smoke.py  test_deepseek_v4_sparse_mla_vllm_patch.py  test_proxy.py  test_receipts.py  test_smoke.py  test_terminal_bench_eval.py  test_tts_chirp.py  test_tts_cosyvoice.py  test_tts_normalize.py  test_tts_seam.py  test_tts_service.py
