[project]
name = "hydralisk"
version = "0.1.0"
description = "OpenAgents Python/NVIDIA inference lane"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1",
  "httpx>=0.28.0,<1",
  "pydantic>=2.10.0,<3",
  "uvicorn[standard]>=0.34.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9",
  "pytest-asyncio>=1.1.0,<2",
]

[project.scripts]
hydralisk-proxy = "hydralisk.serve.proxy:main"
hydralisk-smoke = "hydralisk.serve.smoke:main"
hydralisk-deepseek-v4-preflight = "hydralisk.admission.deepseek_v4_flash:main"
hydralisk-deepseek-v4-b12x-clamp-audit = "hydralisk.admission.deepseek_v4_b12x_clamp_audit:main"
hydralisk-deepseek-v4-b12x-clamp-patch = "hydralisk.admission.deepseek_v4_b12x_clamp_patch:main"
hydralisk-deepseek-v4-flashmla-sparse-audit = "hydralisk.admission.deepseek_v4_flashmla_sparse_audit:main"
hydralisk-deepseek-v4-sparse-mla-smoke = "hydralisk.admission.deepseek_v4_sparse_mla_smoke:main"
hydralisk-deepseek-v4-sparse-mla-vllm-patch = "hydralisk.admission.deepseek_v4_sparse_mla_vllm_patch:main"
hydralisk-deepseek-v4-fable-adapter-probe = "hydralisk.admission.deepseek_v4_fable:main"
hydralisk-deepseek-v4-fable-load-canary = "hydralisk.admission.deepseek_v4_fable:load_canary_main"
hydralisk-deepseek-v4-fable-lab-eval = "hydralisk.admission.deepseek_v4_fable:lab_eval_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hydralisk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
